lld/test/error-fixup-target.objtxt
# RUN: not lld-core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that unbindable target name produces a readable error.
#

---
defined-atoms:
    - name:          entry
      scope:         hidden
      references:
      - offset:      3
        kind:        3
        target:      bar
      - offset:      5
        kind:        3
        target:      baz

undefined-atoms:
    - name:          bar

...


# CHECK:  error: no such atom name: baz
